--- a/index.html
+++ b/index.html
@@ -105,8 +105,8 @@
       <div class="container py-5">
         <h2 class="text-body-emphasis">"I no longer have to sniff other dogs for love. I've found the hottest Corgi on
           TinDog. Woof."</h2>
-        <img src="./images/dog-img.jpg" alt="" height="100" class="circular mt-5">
-        <p class="col-lg-8 mx-auto lead">
+        <img src="./images/dog-img.jpg" alt="" height="100" class="profile-img mt-5">
+        <p class="col-lg-8 mx-auto lead mt-2">
           Pebbles, New York
         </p>
       </div>
